# vscode-vcpkg-cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
